--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,11 @@
         "name": "next"
       }
     ],
+    // "paths": {
+    //   "@/*": ["./src/*"]
+    // }
     "paths": {
-      "@/*": ["./src/*"]
+      "@repo-2/*": ["../repo-2/src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
